syntax = "proto3";

package discount;

service Service {
  rpc get(GetRequest) returns (GetResponse) {}
}

message GetRequest {
  int64 birth_date = 1;
  repeated Product products = 2;
}

message GetResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  int32 price_in_cents = 2;
  string title = 3;
  string description = 4;
  Discount discount = 5;
}

message Discount {
  float pct = 1;
  int32 value_in_cents = 2;
}
